--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <base target="_blank" />
-    <link rel="stylesheet" type="text/css" href="./frkfrontend.css" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,6 +21,8 @@
     />
   </head>
   <body>
-    test
+    <header class="homepage__header">
+      <h1 class="homepage__title">Velkommen til Frk. Frontend 🦄</h1>
+    </header>
   </body>
 </html>
