--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     />
   </head>
   <body>
-    <header class="homepage__header">
-      <h1 class="homepage__title">Velkommen til Frk. Frontend 🦄</h1>
+    <header class="homepage__header window window--pink">
+      <div class="window__top window__top--purple"></div>
+      <div class="window__content window__content--big">
+        <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
+      </div>
     </header>
   </body>
 </html>
