--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Frk Frontend</title>
+    <title>Elises side</title>
     <meta name="description" content="Dette er en enkel beskrivelse" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
