--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     />
   </head>
   <body>
+    <div class="cloud cloud--1"></div>
+    <div class="cloud cloud--2"></div>
+    <div class="cloud cloud--3"></div>
+    <div class="cloud cloud--4"></div>
+    <div class="cloud cloud--5"></div>
+    <div class="cloud cloud--6"></div>
+    <div class="cloud cloud--7"></div>
+    <div class="cloud cloud--8"></div>
     <header class="homepage__header window window--pink">
       <div class="window__top window__top--purple"></div>
       <div class="window__content window__content--big">
