--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
     />
   </head>
   <body>
-    <div class="cloud cloud--1"></div>
-    <div class="cloud cloud--2"></div>
-    <div class="cloud cloud--3"></div>
-    <div class="cloud cloud--4"></div>
-    <div class="cloud cloud--5"></div>
-    <div class="cloud cloud--6"></div>
-    <div class="cloud cloud--7"></div>
-    <div class="cloud cloud--8"></div>
+    <div class="clouds">
+      <div class="cloud cloud--1"></div>
+      <div class="cloud cloud--2"></div>
+      <div class="cloud cloud--3"></div>
+      <div class="cloud cloud--4"></div>
+      <div class="cloud cloud--5"></div>
+      <div class="cloud cloud--6"></div>
+      <div class="cloud cloud--7"></div>
+      <div class="cloud cloud--8"></div>
+    </div>
+
     <header class="homepage__header window window--pink">
       <div class="window__top window__top--purple"></div>
       <div class="window__content window__content--big">
