Added bad code to break pa11y scanner

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <div class="window__top window__top--purple"></div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
+        <h2></h2>
+        <h3 style="color: white">Test</h3>
       </div>
     </header>
   </body>
