Added stars on darkmode

--- a/index.html
+++ b/index.html
@@ -31,13 +31,38 @@
       <div class="cloud cloud--7"></div>
       <div class="cloud cloud--8"></div>
     </div>
+    <div class="stars">
+      <div class="star__container">
+        <div class="star star--1"></div>
+      </div>
+      <div class="star__container">
+        <div class="star star--2"></div>
+      </div>
+      <div class="star__container">
+        <div class="star star--3"></div>
+      </div>
+      <div class="star__container">
+        <div class="star star--4"></div>
+      </div>
+      <div class="star__container">
+        <div class="star star--5"></div>
+      </div>
+      <div class="star__container">
+        <div class="star star--6"></div>
+      </div>
+      <div class="star__container">
+        <div class="star star--7"></div>
+      </div>
+      <div class="star__container">
+        <div class="star star--8"></div>
+      </div>
+    </div>
 
     <header class="homepage__header window window--pink">
       <div class="window__top window__top--purple"></div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
-        <h2></h2>
-        <h3 style="color: white">Test</h3>
+        <h2>⚠️ Under konstruksjon ⚠️</h2>
       </div>
     </header>
   </body>
