Deploy bad gode to get example

--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
     </div>
 
     <header class="homepage__header window window--pink">
+      <h1></h1>
+      <h2 style="color: white">Hei</h2>
+
       <div class="window__top window__top--purple"></div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
-        <h2>⚠️ Under konstruksjon ⚠️</h2>
+        <h2 class="h3">⚠️ Under konstruksjon ⚠️</h2>
       </div>
     </header>
   </body>
