A lot of small changes wohoo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="clouds">
@@ -59,13 +60,12 @@
     </div>
 
     <header class="homepage__header window window--pink">
-      <h1></h1>
-      <h2 style="color: white">Hei</h2>
-
-      <div class="window__top window__top--purple"></div>
+      <div class="window__top window__top--purple">
+        <button class="window__close-button">✖</button>
+      </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
-        <h2 class="h3">⚠️ Under konstruksjon ⚠️</h2>
+        <h2 class="h4">⚠️ Under konstruksjon ⚠️</h2>
       </div>
     </header>
   </body>
