--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
+    <script src="script.js"></script>
   </head>
   <body class="about">
     <div class="clouds">
@@ -58,11 +59,15 @@
       </div>
     </div>
 
-    <a href="/" class="h3 frontpage-link">Tilbake til forside</a>
+    <nav class="main-menu">
+      <a href="/" class="h3 frontpage-link">Tilbake til forside</a>
+    </nav>
 
     <main class="grid grid--two-columns">
       <div class="grid__item window window--pink">
-        <div class="window__top window__top--lilac"></div>
+        <div class="window__top window__top--lilac">
+          <button class="window__close-button">✖</button>
+        </div>
         <div class="window__content window__content--medium">
           <h1 class="about__title">Om meg</h1>
           <p>
@@ -95,7 +100,9 @@
         </div>
       </div>
       <div class="grid__item window window--white">
-        <div class="window__top window__top--pink"></div>
+        <div class="window__top window__top--pink">
+          <button class="window__close-button">✖</button>
+        </div>
         <div class="window__content window__content--big">
           <img src="bilde_av_meg.jpg" alt="Bilde av meg" />
         </div>
