New meta text for bariant

--- a/bariant.html
+++ b/bariant.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Elises side</title>
-    <meta name="description" content="Dette er en enkel beskrivelse" />
+    <title>Bariant</title>
+    <meta name="description" content="Bariant. Variants topplag." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <base target="_blank" />
