Added the first page and a menu button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
       </div>
     </div>
 
+    <button class="action-button action-button--white">
+      <div class="action-button__content" id="menu-button">Meny</div>
+    </button>
+
+    <div class="window window--blue" id="main-menu">
+      <div class="window__top window__top--yellow">
+        <button class="window__close-button">✖</button>
+      </div>
+      <div class="window__content window__content--small">
+        <nav aria-label="main-menu">
+          <ul>
+            <li><a href="/" class="h3 menu-link">Forside 🏠</a></li>
+            <li><a href="/about" class="h3 menu-link">Om meg 🙋‍♀️</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
     <header class="homepage__header window window--pink">
       <div class="window__top window__top--purple">
         <button class="window__close-button">✖</button>
