--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             katter.
           </p>
           <p>
-            Jeg vokste opp på Lørenkog, tok bachelorgraden min i Bø og fikk
+            Jeg vokste opp på Lørenkog, tok bachelorgraden min i Bø. Jeg fikk
             praksisplass og deretter min første utviklerjobb i Skien, og siden
             har jeg blitt boende der.
           </p>
