--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
       </div>
     </div>
 
-    <button class="action-button action-button--white">
+    <button
+      class="action-button action-button--white action-button--shadow-pink"
+    >
       <div class="action-button__content" id="menu-button">Meny</div>
     </button>
 
