Fixed links in menu

--- a/about.html
+++ b/about.html
@@ -70,8 +70,12 @@
       <div class="window__content window__content--small">
         <nav aria-label="main-menu">
           <ul>
-            <li><a href="/" class="h3 menu-link">Forside 🏠</a></li>
-            <li><a href="/about" class="h3 menu-link">Om meg 🙋‍♀️</a></li>
+            <li>
+              <a target="_self" href="/" class="h3 menu-link">Forside 🏠</a>
+            </li>
+            <li>
+              <a target="_self" href="/about" class="h3 menu-link">Om meg 🙋‍♀️</a>
+            </li>
           </ul>
         </nav>
       </div>
