--- a/about.html
+++ b/about.html
@@ -90,30 +90,15 @@
           <h1 class="about__title">Om meg</h1>
           <p>
             Hallo! Jeg er Elise og jeg har jobbet som utvikler i sju år, med
-            mest fokus på frontend! Jeg er 29 år, har mann og to plagsomme
-            katter.
+            mest fokus på frontend!
           </p>
           <p>
-            Jeg vokste opp på Lørenkog, tok bachelorgraden min i Bø. Jeg fikk
-            praksisplass og deretter min første utviklerjobb i Skien, og siden
-            har jeg blitt boende der.
-          </p>
-          <p>
-            Jeg begynte å studere informasjonssystemer fordi jeg trodde jeg
-            ville drive med noe økonomigreier (etter at jeg først trodde jeg
-            ville bli sykepleier og så markedsfører) men fant ut at datafagene
-            var de morsomste, så jeg fikk lov til å flytte over til informatikk.
-            Og slik endte jeg som frontendutvikler!
-          </p>
-          <p>
-            De hobbyene jeg klarer å vedlikeholde best er trening, lese bøker og
-            spille spill, tror jeg? Også er jeg veldig glad i å bruke helgene på
-            å være med venner, da. Ellers har jeg så mange små hobbyer jeg
-            svinger innom noen uker her og der i løpet av året, at jeg aldri
-            klarer å bli god i noen av dem. Som å male, klatre, klage i
-            kronikker, scrapbooking, plante mat, bygge ting, lære kattene triks
-            og akkurat nå den siste uka har jeg prøvd å lære meg piano (det går
-            ikke så bra).
+            Buzzwordoppsummering: Har til nå utviklet i vue, svelte, react og
+            litt for mye jquery, og har fått bruke CMS'ene Sanity, Wagtail,
+            Umbraco, eZ Publish og eZ Platform. Har god erfaring med rammeverk
+            som tailwind, bootstrap og foundation, og har jobbet mot
+            designskisser i Figma og Invision. Jeg er også glad i universell
+            utforming.
           </p>
         </div>
       </div>
