--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon/favicon-16x16.png"
+    />
     <script src="script.js"></script>
   </head>
   <body>
@@ -77,6 +94,11 @@
             </li>
             <li>
               <a target="_self" href="/about" class="h3 menu-link">Om meg 🙋‍♀️</a>
+            </li>
+            <li>
+              <a target="_self" href="/about" class="h3 menu-link"
+                >Artikler og foredrag 📝</a
+              >
             </li>
           </ul>
         </nav>
