--- a/about.html
+++ b/about.html
@@ -76,9 +76,9 @@
       </div>
     </div>
 
-    <button class="action-button action-button--white">
-      <div class="action-button__content" id="menu-button">Meny</div>
-    </button>
+    <div class="action-button action-button--white">
+      <button class="action-button__content" id="menu-button">Meny</button>
+    </div>
 
     <div class="window window--blue" id="main-menu">
       <div class="window__top window__top--yellow">
