Added link to articles even tho its not ready yet

--- a/articles.html
+++ b/articles.html
@@ -38,7 +38,7 @@
     />
     <script src="script.js"></script>
   </head>
-  <body class="about">
+  <body class="articles">
     <div class="clouds">
       <div class="cloud cloud--1"></div>
       <div class="cloud cloud--2"></div>
@@ -102,26 +102,33 @@
         </nav>
       </div>
     </div>
-
+    <div class="window window--pink window--header">
+      <div class="window__top window__top--lilac">
+        <button class="window__close-button">✖</button>
+      </div>
+      <div class="window__content window__content--medium">
+        <h1 class="about__title">Artikler og foredrag</h1>
+      </div>
+    </div>
     <main class="grid grid--two-columns">
       <div class="grid__item window window--pink">
         <div class="window__top window__top--lilac">
           <button class="window__close-button">✖</button>
         </div>
         <div class="window__content window__content--medium">
-          <h1 class="about__title">Om meg</h1>
-          <p>
-            Hallo! Jeg er Elise og jeg har jobbet som utvikler i sju år, med
-            mest fokus på frontend!
-          </p>
-          <p>
-            Buzzwordoppsummering: Har til nå utviklet i vue, svelte, react og
-            litt for mye jquery, og har fått bruke CMS'ene Sanity, Wagtail,
-            Umbraco, eZ Publish og eZ Platform. Har god erfaring med rammeverk
-            som tailwind, bootstrap og foundation, og har jobbet mot
-            designskisser i Figma og Invision. Jeg er også glad i universell
-            utforming.
-          </p>
+          <h2>Tekster</h2>
+          <h3>Faglig</h3>
+          <ul>
+            <li>Bla</li>
+            <li>Bla</li>
+            <li>Bla</li>
+          </ul>
+          <h3>Samfunn</h3>
+          <ul>
+            <li>Bla</li>
+            <li>Bla</li>
+            <li>Bla</li>
+          </ul>
         </div>
       </div>
       <div class="grid__item window window--white">
@@ -129,7 +136,12 @@
           <button class="window__close-button">✖</button>
         </div>
         <div class="window__content window__content--big">
-          <img src="bilde_av_meg.jpg" alt="Bilde av meg" />
+          <h2>Foredrag</h2>
+          <ul>
+            <li>Bla</li>
+            <li>Bla</li>
+            <li>Bla</li>
+          </ul>
         </div>
       </div>
     </main>
