--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <a target="_self" href="/about" class="h3 menu-link">Om meg 🙋‍♀️</a>
             </li>
             <li>
-              <a target="_self" href="/about" class="h3 menu-link"
+              <a target="_self" href="/articles" class="h3 menu-link"
                 >Artikler og foredrag 📝</a
               >
             </li>
