added content to articles page

--- a/articles.html
+++ b/articles.html
@@ -119,15 +119,156 @@
           <h2>Tekster</h2>
           <h3>Faglig</h3>
           <ul>
-            <li>Bla</li>
-            <li>Bla</li>
-            <li>Bla</li>
+            <li>
+              Digi - 2023:
+              <a
+                href="https://www.digi.no/artikler/debatt-hodelos-bruk-av-kunstig-intelligens-er-uetisk/538080"
+                >Hodeløs bruk av kunstig intelligens er uetisk</a
+              >
+            </li>
+            <li>
+              Kode24 - 2024:
+              <a
+                href="https://www.kode24.no/artikkel/accessibility-overlays-kan-do-og-ingen-vil-savne-dem/80824027"
+              >
+                Accessibility overlays kan dø, og ingen vil savne dem
+              </a>
+            </li>
+            <li>
+              Kode24 - 2022
+              <a
+                href="https://www.kode24.no/artikkel/elise-tror-det-er-4-grunner-til-at-ikke-alle-nettsider-er-universelt-utforma/76987098"
+                >Fire grunner til at nettsider ikke er universelt utformet</a
+              >
+            </li>
+            <li>
+              Apliabloggen
+              <a
+                href="https://www.aplia.no/blogg/hva-er-skrifttyper-og-fonter/"
+              >
+                Hva er skrifttyper og fonter?
+              </a>
+            </li>
+            <li>
+              Apliabloggen
+              <a
+                href="https://www.aplia.no/blogg/bruk-av-ulike-skrifttyper-og-fonter/"
+              >
+                Bruk av ulike skrifttyper og fonter
+              </a>
+            </li>
+            <li>
+              Apliabloggen
+              <a href="https://www.aplia.no/blogg/wagtail-vs-wordpress/">
+                Wagtail vs Wordpress
+              </a>
+            </li>
           </ul>
           <h3>Samfunn</h3>
           <ul>
-            <li>Bla</li>
-            <li>Bla</li>
-            <li>Bla</li>
+            <li>
+              NRK - 2024:
+              <a
+                href="https://www.nrk.no/ytring/incels-kan-ikke-styre-politikken-1.16750924"
+                >Incels kan ikke styre politikken</a
+              >
+            </li>
+            <li>
+              Digi - 2020:
+              <a
+                href="https://www.digi.no/artikler/debatt-hvorfor=sa-fa-kvinner-i-it-bransjen/500823"
+                >Hvorfor så få kvinner i IT-bransjen?</a
+              >
+            </li>
+            <li>
+              Kode24 - 2021:
+              <a
+                href="https://www.kode24.no/artikkel/biologi-er-fortsatt-en-darlig-unnskyldning-til-kjonnsgapet-i-it-bransjen/74459747"
+              >
+                - Biologi er fortsatt en dårlig unnskyldning til kjønnsgapet i
+                IT-bransjen
+              </a>
+            </li>
+            <li>
+              Kode24 - Kvinnedagen 2022:
+              <a
+                href="https://www.kode24.no/artikkel/vi-ma-slutte-a-omtale-utviklere-som-nerder-og-programmering-som-livsstil/75551092"
+                >Vi må slutte å omtale utviklere som nerder, og programmering
+                som livsstil</a
+              >
+            </li>
+            <li>
+              Kode24 - Kvinnedagen 2023:
+              <a
+                href="https://www.kode24.no/artikkel/lonnsmodellen-forer-til-ubevisst-diskriminering-bade-av-kvinner-og-menn/78673902"
+              >
+                - Lønnsmodellen fører til ubevisst diskriminering, både av
+                kvinner og menn
+              </a>
+            </li>
+            <li>
+              Kode24 - 2020:
+              <a
+                href="https://www.kode24.no/kodenytt/6-gode-grunner-til-a-oke-kvinneandelen-blant-utviklere/72983834"
+                >Hvorfor mangfold er viktig i IT-bransjen</a
+              >
+            </li>
+            <li>
+              Kode24 - 2021:
+              <a
+                href="https://www.kode24.no/artikkel/16-aringer-tror-utvikling-er-usosialt-nerdete-darlig-betalt-og-kjedelig/74629405"
+              >
+                16-åringer tror utvikling er usosialt, nerdete, dårlig betalt og
+                kjedelig
+              </a>
+            </li>
+            <li>
+              Kode24 - 2022:
+              <a
+                href="https://www.kode24.no/artikkel/elise-tar-et-oppgjor-med-gatekeeping-blant-norske-utviklere-skadelig-og-ekskluderende/77492024"
+              >
+                Gatekeeping i IT-bransjen
+              </a>
+            </li>
+            <li>
+              Kode24 - 2023:
+              <a
+                href="https://www.kode24.no/artikkel/det-r-en-kjip-holdning-mot-folk-som-bare-er-frontend-utviklere/79115391"
+              >
+                Dårlige holdninger mot frontendutviklere
+              </a>
+            </li>
+            <li>
+              Kode24 - 2025:
+              <a
+                href="https://www.kode24.no/artikkel/sjekking-pa-linkedin-slutt-a-odelegge-andres-karriere/82553364"
+              >
+                Sjekking på linkedin
+              </a>
+            </li>
+            <li>
+              Kode24 - 2023:
+              <a
+                href="https://www.kode24.no/artikkel/det-er-folk-som-regelrett-gruer-seg-til-code-reviews/80111653"
+              >
+                - Det er folk som regelrett gruer seg til code reviews
+              </a>
+            </li>
+            <li>
+              Kode24 - 2020:
+              <a
+                href="https://www.kode24.no/kodenytt/derfor-er-elise-for-mangfold-men-mot-kvotering/73116159"
+              >
+                Kvotering i IT-bransjen
+              </a>
+            </li>
+            <li>
+              Kode24 - 2023:
+              <a
+                href="https://www.kode24.no/artikkel/la-oss-avlive-myten-om-at-det-er-usosialt-a-vaere-utvikler/75210934"
+                >12 grunner til å bli utvikler</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -138,9 +279,37 @@
         <div class="window__content window__content--big">
           <h2>Foredrag</h2>
           <ul>
-            <li>Bla</li>
-            <li>Bla</li>
-            <li>Bla</li>
+            <li>
+              NDC 2024:
+              <a href="https://www.youtube.com/watch?v=hk7c9jOjwZw"
+                >Ten Reasons Your Application Isn't Accessible and What You Can
+                Do About It - Elise Kristiansen
+              </a>
+            </li>
+            <li>
+              AdaCon 2024:
+              <a href="https://www.youtube.com/watch?v=ZJ6dw2JA-kQ">
+                Ten Reasons Your Application Isn't Accessible and What You Can
+                Do About It
+              </a>
+            </li>
+            <li>
+              Cloud Native Day Bergen 2024:
+              <a
+                href="https://2024.cloudnativebergen.dev/speaker/elise-kristiansen"
+              >
+                Hvordan skyteknologi gjør Universell Utforming enklere å
+                overholde - Lightning Talk (10 min)
+              </a>
+            </li>
+          </ul>
+          <h2>Podcast</h2>
+          <ul>
+            <li>
+              <a href="https://open.spotify.com/show/0JoLy6ycrSfifyooZSbWrq"
+                >AI og inkludering med Elise Kristiansen</a
+              >
+            </li>
           </ul>
         </div>
       </div>
