Added easter egg

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-    <div class="action-button action-button--white">
+    <div class="action-button action-button--white menu-button">
       <button class="action-button__content" id="menu-button">Meny</button>
     </div>
 
