--- a/articles.html
+++ b/articles.html
@@ -306,8 +306,17 @@
           <h2>Podcast</h2>
           <ul>
             <li>
+              David & AI:
               <a href="https://open.spotify.com/show/0JoLy6ycrSfifyooZSbWrq"
                 >AI og inkludering med Elise Kristiansen</a
+              >
+            </li>
+          </ul>
+          <h2>Offentlig krangling</h2>
+          <ul>
+            <li>
+              <a href="https://tv.nrk.no/se?v=NNFA56070124&t=2355s"
+                >Dagsnytt 18 - 2024</a
               >
             </li>
           </ul>
