--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Elises side</title>
     <meta name="description" content="Dette er en enkel beskrivelse" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="./images/me.jpg" />
 
     <base target="_blank" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
