Added darkmode button

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
             </li>
           </ul>
         </nav>
+        <button id="theme-toggle" class="action-button action-button--pink">
+          <span class="action-button__content">Bytt tema</span>
+        </button>
       </div>
     </div>
     <header class="homepage__header window window--pink">
