--- a/articles.html
+++ b/articles.html
@@ -100,6 +100,9 @@
             </li>
           </ul>
         </nav>
+        <button id="theme-toggle" class="action-button action-button--pink">
+          <span class="action-button__content">Bytt tema</span>
+        </button>
       </div>
     </div>
     <div class="window window--pink window--header">
