--- a/about.html
+++ b/about.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Elises side</title>
-    <meta name="description" content="Dette er en enkel beskrivelse" />
+    <title>Om meg</title>
+    <meta
+      name="description"
+      content="Her er ting og tang om meg. Kommer mer info etterhvert."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <base target="_blank" />
