--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Elises side</title>
-    <meta name="description" content="Dette er en enkel beskrivelse" />
+    <meta
+      name="description"
+      content="Elise Kristiansen sin splitter nye hjemmeside."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="./images/me.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <base target="_blank" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
@@ -114,7 +118,10 @@
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
-        <h2 class="h4">⚠️ Under konstruksjon ⚠️</h2>
+        <h2 class="h4">
+          <span class="remove-on-mobile">⚠️</span> Under konstruksjon
+          <span class="remove-on-mobile">⚠️</span>
+        </h2>
         <div
           class="easter-egg-button action-button action-button--pink"
           aria-label="Klikk for å åpne et vindu med et bilde"
