--- a/articles.html
+++ b/articles.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Elises side</title>
-    <meta name="description" content="Dette er en enkel beskrivelse" />
+    <title>Artikler og foredrag</title>
+    <meta
+      name="description"
+      content="Her er greier jeg har skrevet og steder jeg har pratet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="./images/me.jpg" />
 
     <base target="_blank" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
