Added alt text to image

--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
         <button class="window__close-button">✖</button>
       </div>
       <div class="window__content">
-        <img src="images/428644628_694964766126009_504772917710984040_n.jpg" />
+        <img
+          src="images/428644628_694964766126009_504772917710984040_n.jpg"
+          alt="Bilde der det står 'Du har høyrt om Frk. Frontend, men hva med Herr Backend?' og tegning av en utviklermann"
+        />
       </div>
     </div>
   </body>
