--- a/articles.html
+++ b/articles.html
@@ -284,7 +284,8 @@
           <button class="window__close-button">✖</button>
         </div>
         <div class="window__content window__content--big">
-          <h2>Foredrag</h2>
+          <h2>Prating</h2>
+          <h3>Foredrag</h3>
           <ul>
             <li>
               NDC 2024:
@@ -310,7 +311,7 @@
               </a>
             </li>
           </ul>
-          <h2>Podcast</h2>
+          <h3>Podcast</h3>
           <ul>
             <li>
               David & AI:
@@ -319,7 +320,7 @@
               >
             </li>
           </ul>
-          <h2>Offentlig krangling</h2>
+          <h3>Offentlig krangling</h3>
           <ul>
             <li>
               <a href="https://tv.nrk.no/se?v=NNFA56070124&t=2355s"
