About page fixes

--- a/about.html
+++ b/about.html
@@ -120,13 +120,43 @@
             Hallo! Jeg er Elise og jeg har jobbet som utvikler i sju år, med
             mest fokus på frontend!
           </p>
+          <h2>SOME</h2>
+          <nav aria-label="Sosiale medie-linker">
+            <ul class="some-links">
+              <li>
+                <a
+                  class="some-links__link"
+                  aria-label="Bluesky-link"
+                  href="https://bsky.app/profile/frkfrontend.no"
+                  ><img src="images/Bluesky_Logo.png" alt="Bluesky logo"
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="some-links__link"
+                  aria-label="Linkedin-link"
+                  href="https://www.linkedin.com/in/elisekristiansen/"
+                >
+                  <img src="images/LinkedIn_icon.webp" alt="Linkedinlogo" />
+                </a>
+              </li>
+              <li>
+                <a
+                  aria-label="Send meg epost"
+                  class="some-links__link"
+                  href="mailto:elise.kri@hotmail.com"
+                  >@</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <h2>Buzzwords</h2>
           <p>
-            Buzzwordoppsummering: Har til nå utviklet i vue, svelte, react og
-            litt for mye jquery, og har fått bruke CMS'ene Sanity, Wagtail,
-            Umbraco, eZ Publish og eZ Platform. Har god erfaring med rammeverk
-            som tailwind, bootstrap og foundation, og har jobbet mot
-            designskisser i Figma og Invision. Jeg er også glad i universell
-            utforming.
+            Har til nå utviklet i vue, svelte, react og litt for mye jquery, og
+            har fått bruke CMS'ene Sanity, Wagtail, Umbraco, eZ Publish og eZ
+            Platform. Har god erfaring med rammeverk som tailwind, bootstrap og
+            foundation, og har jobbet mot designskisser i Figma og Invision. Jeg
+            er også glad i universell utforming.
           </p>
         </div>
       </div>
@@ -134,7 +164,7 @@
         <div class="window__top window__top--pink">
           <button class="window__close-button">✖</button>
         </div>
-        <div class="window__content window__content--big">
+        <div class="window__content">
           <img src="bilde_av_meg.jpg" alt="Bilde av meg" />
         </div>
       </div>
