Added a ting og tang page

--- a/articles.html
+++ b/articles.html
@@ -102,6 +102,11 @@
                 >Artikler og foredrag 📝</a
               >
             </li>
+            <li>
+              <a target="_self" href="/ting" class="h3 menu-link"
+                >Ting og tang 💅</a
+              >
+            </li>
           </ul>
         </nav>
         <button id="theme-toggle" class="action-button action-button--pink">
