--- a/ting.html
+++ b/ting.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Artikler og foredrag</title>
+    <title>Ting og tang</title>
     <meta
       name="description"
-      content="Her er greier jeg har skrevet og steder jeg har pratet"
+      content="Linker og badges og etterhvert litt annet gøy"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="./images/me.jpg" />
