More eastery easteregg

--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
+        
+      </div>
+    </header>
+    <div class="window window--white window--small easter-egg-button-div">
+      <div class="window__top window__top--pink">
+        <button class="window__close-button">✖</button>
+      </div>
+      <div class="window__content">
         <div
           class="easter-egg-button action-button action-button--pink"
           aria-label="Klikk for å åpne et vindu med et bilde"
@@ -132,7 +140,9 @@
           </button>
         </div>
       </div>
-    </header>
+    </div>
+  </div>
+
     <div class="homepage__header window window--white" id="easter-egg">
       <div class="window__top window__top--pink">
         <button class="window__close-button">✖</button>
@@ -143,6 +153,5 @@
           alt="Bilde der det står 'Du har høyrt om Frk. Frontend, men hva med Herr Backend?' og tegning av en utviklermann"
         />
       </div>
-    </div>
   </body>
 </html>
