--- a/ting.html
+++ b/ting.html
@@ -148,7 +148,7 @@
               <a href="https://kode24.no">Kode24.no</a>
             </li>
             <li>
-              <a href="https://kortslutning.fun">Kortslutnig.fun</a>
+              <a href="https://kortslutning.fun">Kortslutning.fun</a>
             </li>
           </ul>
         </div>
