--- a/ting.html
+++ b/ting.html
@@ -150,6 +150,15 @@
             <li>
               <a href="https://kortslutning.fun">Kortslutning.fun</a>
             </li>
+            <li>
+              <a href="https://bariant.no">Bariant.no</a>
+            </li>
+            <li>
+              <a href="https://rubenbratsberg.no">Rubenbratsberg.no</a>
+            </li>
+            <li>
+              <a href="https://www.retromessa.no">Retromessa.no</a>
+            </li>
           </ul>
         </div>
       </div>
