More changes on about me

--- a/ting.html
+++ b/ting.html
@@ -166,8 +166,9 @@
         <div class="window__top window__top--pink">
           <button class="window__close-button">✖</button>
         </div>
-        <div class="window__content window__content--big">
+        <div class="window__content window__content--medium">
           <h2>Badges</h2>
+          <span class="window-decoration">🦡</span>
           <frk-frontend-badge></frk-frontend-badge>
           <script src="frk-frontend-badge.js"></script>
           <norsk-programmering-badge></norsk-programmering-badge>
