--- a/about.html
+++ b/about.html
@@ -170,7 +170,38 @@
           <button class="window__close-button">✖</button>
         </div>
         <div class="window__content">
-          <img src="bilde_av_meg.jpg" alt="Bilde av meg" />
+          <img src="images/bilde_av_meg_3.png" alt="Bilde av meg" />
+        </div>
+        <div class="window window--white window--absolute">
+          <div class="window__top window__top--pink">
+            <button class="window__close-button">✖</button>
+          </div>
+          <div class="window__content pizza-egg-window">
+            <div class="action-button action-button--pink">
+              <button
+                aria-label="Lukk vindu"
+                class="pizza-egg-button action-button__content"
+              >
+                🍕
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="window window--white window--absolute">
+          <div class="window__top window__top--pink">
+            <button class="window__close-button">✖</button>
+          </div>
+          <div class="window__content">
+            <img src="images/bilde_av_meg_2.jpg" alt="Bilde av meg" />
+          </div>
+        </div>
+        <div class="window window--white window--absolute">
+          <div class="window__top window__top--pink">
+            <button class="window__close-button">✖</button>
+          </div>
+          <div class="window__content">
+            <img src="bilde_av_meg.jpg" alt="Bilde av meg" />
+          </div>
         </div>
       </div>
     </main>
