--- a/about.html
+++ b/about.html
@@ -170,22 +170,7 @@
           <button class="window__close-button">✖</button>
         </div>
         <div class="window__content">
-          <img src="images/bilde_av_meg_3.png" alt="Bilde av meg" />
-        </div>
-        <div class="window window--white window--absolute">
-          <div class="window__top window__top--pink">
-            <button class="window__close-button">✖</button>
-          </div>
-          <div class="window__content pizza-egg-window">
-            <div class="action-button action-button--pink">
-              <button
-                aria-label="Lukk vindu"
-                class="pizza-egg-button action-button__content"
-              >
-                🍕
-              </button>
-            </div>
-          </div>
+          <img src="images/bilde_av_meg_4.jpg" alt="Bilde av meg" />
         </div>
         <div class="window window--white window--absolute">
           <div class="window__top window__top--pink">
@@ -205,5 +190,32 @@
         </div>
       </div>
     </main>
+    <div class="window window--white window--small pizza-egg-button-div">
+      <div class="window__top window__top--pink">
+        <button class="window__close-button">✖</button>
+      </div>
+      <div class="window__content pizza-egg-window">
+        <div class="action-button action-button--pink">
+          <button
+            aria-label="Trykk for å se et bilde"
+            class="pizza-egg-button action-button__content"
+            id="pizza-egg-button"
+          >
+            🍕
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="window window--white" id="pizza-egg">
+      <div class="window__top window__top--pink">
+        <button class="window__close-button">✖</button>
+      </div>
+      <div class="window__content">
+        <img
+          src="images/bilde_av_meg_3.png"
+          alt="Bilde av meg som spiser pizza"
+        />
+      </div>
+    </div>
   </body>
 </html>
