--- a/ting.html
+++ b/ting.html
@@ -159,6 +159,9 @@
             <li>
               <a href="https://www.retromessa.no">Retromessa.no</a>
             </li>
+            <li>
+              <a href="https://jonhofsli.no">jonhofsli.no</a>
+            </li>
           </ul>
         </div>
       </div>
