--- a/ting.html
+++ b/ting.html
@@ -160,7 +160,7 @@
               <a href="https://www.retromessa.no">Retromessa.no</a>
             </li>
             <li>
-              <a href="https://jonhofsli.no">jonhofsli.no</a>
+              <a href="https://jonhofsli.no">Jonhofsli.no</a>
             </li>
           </ul>
         </div>
